--- a/src/main/resources/templates/admin/blog-input.html
+++ b/src/main/resources/templates/admin/blog-input.html
@@ -151,7 +151,7 @@
                     <input type="text" name="firstPicture" th:value="${blog.firstPicture}" placeholder="首图引用地址 https://tenapi.cn/acg">
 
                 </div>
-                <a>https://tenapi.cn/acg"</a>
+                <span class="m-text" style="background-color: whitesmoke;">首图参考: </span><a href="https://tenapi.cn/acg" target="_blank">https://tenapi.cn/acg</a>
             </div>
             <div class="required field">
                 <textarea name="description" th:text="${blog.description}" placeholder="博客描述..." maxlength="100"></textarea>
