--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -46,7 +46,10 @@
             <p th:text="${session.User.getNickname}+'，欢迎登录！'"> 赵睿宇，欢迎登录！</p>
 
         </div>
-        <img src="../../static/images/男人背影图.jpg" th:src="@{/images/back1.jpg}" class="ui rounded bordered fluid image">
+        <div style="height: 400px;">
+            <img src="https://tenapi.cn/acg"  class="ui rounded bordered fluid image">
+        </div>
+
     </div>
 
 </div>
