--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -520,12 +520,8 @@ h5,h6{font-size:1em;}
                         </div>
                         <div class="ui payQR flowing popup transition hidden">
                             <div class="ui orange basic label">
-                                <div class="ui small images">
+                                <div class="ui medium images">
                                     <div class="ui images ">
-                                        <div class="image ">
-                                            <img class="ui rounded bordered image" src="../static/images/微信二维码1.png"
-                                                 th:src="@{/images/pay/img.png}">
-                                        </div>
                                         <div class="image ">
                                             <img class="ui rounded bordered image" src="../static/images/微信二维码1.png"
                                                  th:src="@{/images/pay/img_1.png}">
