--- a/src/main/resources/templates/admin/blogs.html
+++ b/src/main/resources/templates/admin/blogs.html
@@ -36,23 +36,13 @@
     </a>
 </nav>
 
-<div class="ui attached pointing menu" >
-
-    <div class="ui  container">
-        <div class="ui right menu">
-            <a href="#" th:href="@{/admin/blogs/input}" class=" item">发布</a>
-            <a href="#" th:href="@{/admin/blogs}" class="teal active item">列表</a>
-            <!--            teal 颜色放在 active 的前面-->
-        </div>
-    </div>
-
-</div>
 <!--top attached 完整拼接成一个相连区域 bottom attached-->
 <!--中间内容-->
 <div class="m-padded-tb-4em m-container-small ">
     <div class="ui container">
         <div class="ui secondary segment form">
             <input type="hidden" name="pageInfo">
+            <input type="hidden" name="UserId" th:value="${session.User.id}">
             <div class="inline fields">
                 <div class="field">
                     <input type="text" name="title" placeholder="标题">
@@ -239,6 +229,7 @@
             typeId: $("[name='typeId']").val(),
             recommend: $("[name='recommend']").prop('checked'),
             pageNum: $("[name='pageInfo']").val(),
+            userId: $("[name='UserId']").val(),
         } );
     }
 
