--- a/src/main/resources/static/lib/typo/typo.css
+++ b/src/main/resources/static/lib/typo/typo.css
@@ -43,7 +43,7 @@
   font-size: 16px;
   font-weight: 450;
   line-height: 24px;
-  text-align: justify;
+  /*text-align: justify;*/
   margin: 25px 0;
   position: relative;
 /*  两端对齐*/
