--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -47,11 +47,11 @@
             </div>
             <div class="five wide column m-card-mod">
                 <div class="ui top attached segment">
-                    <div class="ui header">关于我</div>
+                    <div class="ui header">关于我!!!</div>
                 </div>
                 <div class="ui attached segment">
                     <p class="m-text" th:text="#{index.blogDescription}">猫喵喵，一个在读大学生。时间过得好快呀，已经大三了。自己却还是个菜鸟。。后知后觉，开始干干干！！！</p>
-                    <p class="m-text">热爱编程，打磨编程技术。</p>
+                    <p class="m-text">（本项目以开源）<a target="_blank" href="https://gitee.com/zhao--ruiyu/spring-boot-blog-master">地址</a></p>
                 </div>
                 <div class="ui attached segment">
                     <div class="ui orange basic left pointing label">编程</div>
