--- a/src/main/resources/static/css/me.css
+++ b/src/main/resources/static/css/me.css
@@ -123,7 +123,9 @@ a {
 .m-padded-top-best {
     padding-top: 10em !important;
 }
-
+.m-padded-top {
+    padding-top: 2em !important;
+}
 .m-padded-tb-massive {
     padding-top: 5em !important;
     padding-bottom: 5em !important;
