--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -57,11 +57,9 @@
                 <div class="ui container">
                     <div class="ui  padded segment">
                         <!--   内容-->
-                        <div class="ui right aligned basic segment">
-                            <div class="ui orange basic label" th:text="${blog.flag}">原创</div>
+                        <div class="ui  aligned basic segment">
                         </div>
                         <h2 class="ui center aligned header" th:text="${blog.title}">两年练习生的长长短短</h2>
-                        <br>
                         <div id="content" th:utext="${blog.content}"
                              class="js-toc-content typo typo-selection m-padded-lr-responsive m-padded-tb-2em">
                             <h2 id="tagline" class="serif">一致化浏览器排版效果，构建最适合中文阅读的网页排版</h2>
@@ -559,7 +557,7 @@ h5,h6{font-size:1em;}
                                             </div>
                                             <div class="actions">
                                                 <a class="reply" data-commentid="1" data-commentnickname="Matt"
-                                                   th:attr="data-commentid=${comment.id},data-commentnickname=${comment.nickname}"
+                                                   th:attr="data-commentid=${comment.id},data-commentemail=${comment.email},data-commentnickname=${comment.nickname}"
                                                    onclick="reply(this)">回复</a>
                                             </div>
                                         </div>
@@ -589,7 +587,7 @@ h5,h6{font-size:1em;}
                                                     </div>
                                                     <div class="actions">
                                                         <a class="reply" data-commentid="1" data-commentnickname="Matt"
-                                                           th:attr="data-commentid=${reply.id},data-commentnickname=${reply.nickname}"
+                                                           th:attr="data-commentid=${reply.id},data-commentemail=${reply.email},data-commentnickname=${reply.nickname}"
                                                            onclick="reply(this)">回复</a>
                                                     </div>
                                                 </div>
@@ -604,6 +602,7 @@ h5,h6{font-size:1em;}
                         <div id="comment-form" class="ui form">
                             <input type="hidden" name="blog.id" th:value="${blog.id}">
                             <input type="hidden" name="parentComment.id" value="-1">
+                            <input type="hidden" name="parentComment.email" value="-1">
                             <div class="field">
                                 <textarea name="content" placeholder="快留下你的足迹..."></textarea>
                             </div>
@@ -613,13 +612,13 @@ h5,h6{font-size:1em;}
                                         <i class="user icon"></i>
                                         <input type="text" name="nickname"
                                                th:value="${session.User}!=null ? ${session.User.nickname}"
-                                               placeholder="姓名">
+                                               placeholder="昵称(必填)">
                                     </div>
                                 </div>
                                 <div class="field m-mobile-wide m-margin-bottom-small">
                                     <div class="ui left icon input">
                                         <i class="mail icon"></i>
-                                        <input type="text" name="email" placeholder="邮箱"
+                                        <input type="text" name="email" placeholder="邮箱(将保密)"
                                                th:value="${session.User}!=null ? ${session.User.email}">
                                     </div>
                                 </div>
@@ -848,6 +847,7 @@ h5,h6{font-size:1em;}
     function postData() {
         $("#comment-container").load(/*[[@{/contacts}]]*/"", {
             "parentComment.id": $("[name='parentComment.id']").val(),
+            "parentComment.email": $("[name='parentComment.email']").val(),
             "blog.id": $("[name='blog.id']").val(),
             "nickname": $("[name='nickname']").val(),
             "email": $("[name='email']").val(),
@@ -862,14 +862,17 @@ h5,h6{font-size:1em;}
     function clearContent() {
         $("[name='content']").val('');
         $("[name='parentComment.id']").val(-1);
+        $("[name='parentComment.email']").val('');
         $("[name='content']").attr("placeholder", "欢迎你的评论...");
     }
 
     function reply(obj) {
         var commentId = $(obj).data("commentid");
+        var commentEmail = $(obj).data("commentemail");
         var commentNickname = $(obj).data("commentnickname");
         $("[name='content']").attr("placeholder", "@" + commentNickname).focus();
         $("[name='parentComment.id']").val(commentId);
+        $("[name='parentComment.email']").val(commentEmail);
         $(window).scrollTo($('#comment-form'), 500);
     }
 
