--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -35,7 +35,7 @@
     <header id="header">
         <div class="hero-box d-flex justify-content-center align-items-center flex-column">
             <h1 id="heading" class="mt-5 text-white animated flipInX"style="font-size: 4rem;">
-                猫喵喵のBlog</h1>
+                碧菁筱筱</h1>
             <h3 id="subheading" class="text-white d-flex">我回来<span style="color: rgb(29, 223, 163);">是为了</span><span class="animated rotateIn" style="color: rgb(251, 150, 51);">那些回不来的人</span></h3>
         </div>
     </header>
